src/components/lobby/style.module.scss
.lobby :global {
  @apply h-full;
  .container {
    @apply flex flex-col;
    @apply h-full justify-center;
  }
  .inner {
    @apply mx-auto grow;
    @apply flex flex-col justify-center;
  }
  .topbar {
    @apply flex items-center justify-end;
    @apply mt-7 w-full lg:mt-12;
    .abc-icon {
      @apply mr-2;
    }
    .text {
      @apply text-h4 font-medium;
    }
    .right {
      @apply flex items-center;

      .user-name {
        @apply w-40 break-words;
      }
    }
  }

  .head {
    @apply text-center text-blue-500;
  }
  .heading {
    @apply pb-7 lg:pb-10;
  }
  .headline {
    @apply pb-8;
  }
  .actions {
    @apply grid gap-x-5 gap-y-4 md:grid-cols-2;
  }
  .abc-input.error {
    @apply relative;
    .message {
      @apply absolute left-0 mt-0;
    }
  }
}

